8214862: assert(proj != __null) at compile.cpp:3251

Reviewed-by: kvn, thartmann